--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="unidade_4"/>
+	<classpathentry kind="src" path="unidade_5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
