--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="unidade_4"/>
 	<classpathentry kind="src" path="unidade_5"/>
+	<classpathentry kind="src" path="unidade_6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
