--- a/nelio_alves/bin/.gitignore
+++ b/nelio_alves/bin/.gitignore
@@ -1,5 +1,3 @@
-/aula_1/
-/aula_1_exercicios/
-/aula_2_for/
-/aula_2_exercicios/
-/aula3_do_while/
+/aula1_topicos/
+/aula2_Strings/
+/aula3_funcoes/
