--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="unidade_4"/>
 	<classpathentry kind="src" path="unidade_5"/>
 	<classpathentry kind="src" path="unidade_6"/>
+	<classpathentry kind="src" path="unidade_7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
