--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="unidade_5"/>
 	<classpathentry kind="src" path="unidade_6"/>
 	<classpathentry kind="src" path="unidade_7"/>
+	<classpathentry kind="src" path="unidade_8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
