--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="unidade_6"/>
 	<classpathentry kind="src" path="unidade_7"/>
 	<classpathentry kind="src" path="unidade_8"/>
+	<classpathentry kind="src" path="poo1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
