--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="src" path="unidade_8"/>
 	<classpathentry kind="src" path="poo1"/>
 	<classpathentry kind="src" path="poo2"/>
+	<classpathentry kind="src" path="ex_poo1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
