--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="src" path="poo1"/>
 	<classpathentry kind="src" path="poo2"/>
 	<classpathentry kind="src" path="ex_poo1"/>
+	<classpathentry kind="src" path="ex_poo2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
