--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="src" path="poo3"/>
 	<classpathentry kind="src" path="poo4"/>
 	<classpathentry kind="src" path="poo5"/>
+	<classpathentry kind="src" path="ex_poo4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
