--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="src" path="ex_poo4"/>
 	<classpathentry kind="src" path="poo6"/>
 	<classpathentry kind="src" path="poo7"/>
+	<classpathentry kind="src" path="ex_poo5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
