--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry kind="src" path="poo6"/>
 	<classpathentry kind="src" path="poo7"/>
 	<classpathentry kind="src" path="ex_poo5"/>
+	<classpathentry kind="src" path="un10_aula1_vetores"/>
+	<classpathentry kind="src" path="un10_aula2_vetores"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
