--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -35,5 +35,9 @@
 	<classpathentry kind="src" path="un10_ex9_vetores_mais_velho"/>
 	<classpathentry kind="src" path="un10_ex10_vetores_aprovados"/>
 	<classpathentry kind="src" path="un10_ex11_vetores_dados_pessoas"/>
+	<classpathentry kind="src" path="un10_desafiovetores_pensionato"/>
+	<classpathentry kind="src" path="un10_aula3_boxing"/>
+	<classpathentry kind="src" path="un10_aula3_wrapperClasses"/>
+	<classpathentry kind="src" path="un10_aula4_for_each"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
