--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -40,5 +40,6 @@
 	<classpathentry kind="src" path="un10_aula3_wrapperClasses"/>
 	<classpathentry kind="src" path="un10_aula4_for_each"/>
 	<classpathentry kind="src" path="un10_aula5_listas"/>
+	<classpathentry kind="src" path="un10_exercicio_lista"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
