--- a/nelio_alves/.classpath
+++ b/nelio_alves/.classpath
@@ -42,5 +42,6 @@
 	<classpathentry kind="src" path="un10_aula5_listas"/>
 	<classpathentry kind="src" path="un10_exercicio_lista"/>
 	<classpathentry kind="src" path="un10_aula6_matrizes"/>
+	<classpathentry kind="src" path="un10_desafio_matrizes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
