--- a/secao12_enumeracoes_composicao/.classpath
+++ b/secao12_enumeracoes_composicao/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="aula1_enumecao"/>
 	<classpathentry kind="src" path="aula2_exemplo1_composicao"/>
+	<classpathentry kind="src" path="aula3_exemplo2_composicao"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
