--- a/secao13_heranca_polimorfismo/.classpath
+++ b/secao13_heranca_polimorfismo/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="aula2_upcasting_downcasting"/>
 	<classpathentry kind="src" path="aula3_sobreposicao"/>
 	<classpathentry kind="src" path="aula4_exercicioPolimorfismo"/>
+	<classpathentry kind="src" path="Exercicio_fixacao"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
