--- a/secao14_tratamento_excecoes/.classpath
+++ b/secao14_tratamento_excecoes/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="aula1_trycatch"/>
 	<classpathentry kind="src" path="aula2_pilhasDeChamadas"/>
+	<classpathentry kind="src" path="aula3_finaly"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
