--- a/secao14_tratamento_excecoes/.classpath
+++ b/secao14_tratamento_excecoes/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="aula2_pilhasDeChamadas"/>
 	<classpathentry kind="src" path="aula3_finaly"/>
 	<classpathentry kind="src" path="aula4_excecoes_personalizadas"/>
+	<classpathentry kind="src" path="exercicio"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
