--- a/secao15_arquivos/.classpath
+++ b/secao15_arquivos/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="aula4_FileWriter_BufferedWriter"/>
 	<classpathentry kind="src" path="aula5_manipulandopastas_file"/>
 	<classpathentry kind="src" path="aula6_info_caminho_arquivo"/>
+	<classpathentry kind="src" path="desafio"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
