--- a/secao16_interfaces/.classpath
+++ b/secao16_interfaces/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="aula1_interfaces"/>
 	<classpathentry kind="src" path="desafio_interface"/>
+	<classpathentry kind="src" path="aula2_HerdarVsCumprirContrato"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
