--- a/secao16_interfaces/.classpath
+++ b/secao16_interfaces/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="src" path="aula1_interfaces"/>
 	<classpathentry kind="src" path="desafio_interface"/>
 	<classpathentry kind="src" path="aula2_HerdarVsCumprirContrato"/>
+	<classpathentry kind="src" path="aula3_problema_diamante"/>
+	<classpathentry kind="src" path="aula4_interface_comparable"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
