--- a/secao17_generics_set_map/.classpath
+++ b/secao17_generics_set_map/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="aula4_tiposCoringasDelimitados"/>
 	<classpathentry kind="src" path="aula4_genericosDelimitados_getPut"/>
 	<classpathentry kind="src" path="aula5_HashCode_Equals"/>
+	<classpathentry kind="src" path="aula6_set"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
