--- a/secao17_generics_set_map/.classpath
+++ b/secao17_generics_set_map/.classpath
@@ -13,6 +13,7 @@
 	<classpathentry kind="src" path="exercicio_set2"/>
 	<classpathentry kind="src" path="aula8_map"/>
 	<classpathentry kind="src" path="aula8_map_com_objetos"/>
+	<classpathentry kind="src" path="desafio_map"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
