--- a/secao18_programacaoFuncional_expressoesLambda/.classpath
+++ b/secao18_programacaoFuncional_expressoesLambda/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="aula1_comparator"/>
+	<classpathentry kind="src" path="aula2_predicate"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
