--- a/secao18_programacaoFuncional_expressoesLambda/.classpath
+++ b/secao18_programacaoFuncional_expressoesLambda/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="aula1_comparator"/>
 	<classpathentry kind="src" path="aula2_predicate"/>
+	<classpathentry kind="src" path="aula3_consumer"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
