--- a/secao18_programacaoFuncional_expressoesLambda/.classpath
+++ b/secao18_programacaoFuncional_expressoesLambda/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="aula2_predicate"/>
 	<classpathentry kind="src" path="aula3_consumer"/>
 	<classpathentry kind="src" path="aula4_function"/>
+	<classpathentry kind="src" path="aula5_funcos_recebendo_funcoes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
