--- a/secao18_programacaoFuncional_expressoesLambda/.classpath
+++ b/secao18_programacaoFuncional_expressoesLambda/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="aula4_function"/>
 	<classpathentry kind="src" path="aula5_funcos_recebendo_funcoes"/>
 	<classpathentry kind="src" path="aula6_streams"/>
+	<classpathentry kind="src" path="aula7_pipeline_demo"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
